--- a/app/views/reminder/view_sent_reminder.erb
+++ b/app/views/reminder/view_sent_reminder.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/reminder/reminder_small.png" />
-  <h1>Messages</h1>
-  <h3>Sent</h3>
+  <h1><%= t('messages') %></h1>
+  <h3><%= t('sent') %></h3>
   <div id="app-back-button">
   <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -28,7 +28,7 @@
 <% unless @sent_reminder.is_deleted_by_sender == true %>
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "Delete", {:controller=>"reminder", :action=>"delete_reminder_by_sender", :id2=>@sent_reminder.id}, :confirm=>"Are you sure?" %></li>
+    <li><%= link_to "#{t('delete')}", {:controller=>"reminder", :action=>"delete_reminder_by_sender", :id2=>@sent_reminder.id}, :confirm=>"Are you sure?" %></li>
   </ul>
 </div>
 <% end %>
@@ -39,12 +39,12 @@
 <div id="reminder-body">
 <div id="reminder-from">To: <%= recipient_user.full_name %></div>
 
-<div id="reminder-date">Sent on: <%= @sent_reminder.created_at.strftime("%A, %d %B, %Y") %></div>
+<div id="reminder-date"><%= t('sent_on') %>: <%= @sent_reminder.created_at.strftime("%A, %d %B, %Y") %></div>
 
-<div id="reminder-subject">Subject: <%= @sent_reminder.subject %></div>
+<div id="reminder-subject"><%= t('subject') %>: <%= @sent_reminder.subject %></div>
 
 
 
-<div id="reminder-message"><strong>Message:</strong> <br /><br /><%= @sent_reminder.body %></div>
+<div id="reminder-message"><strong><%= t('message') %>:</strong> <br /><br /><%= @sent_reminder.body %></div>
 </div>
 </div>
