--- a/app/views/sms/_all_sms_box.erb
+++ b/app/views/sms/_all_sms_box.erb
@@ -24,7 +24,7 @@
 <div class="text-input-bg"><%= text_area :send_sms,:message, :rows=>5,:cols=>30 %>
 </div>
 </div>
-<%= submit_tag "#{t('sms_settings.index.send_sms')}",:class=>'submit_button' %>
+<%= submit_tag "#{t('send_sms')}",:class=>'submit_button' %>
 <% end %>
 
 
