--- a/app/views/student/index.erb
+++ b/app/views/student/index.erb
@@ -21,8 +21,8 @@
 
 <div id="content-header">
   <img src="/images/student_details/student_details_logo.jpg" />
-  <h1><%= t('h1') %></h1>
-  <h3><%= t('h3') %></h3>
+  <h1><%= t('student_details') %></h1>
+  <h3><%= t('view_details') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
