--- a/app/views/student/student_annual_overview.erb
+++ b/app/views/student/student_annual_overview.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/admission/admission_page_logo.jpg" />
-  <h1>Student info</h1>
-  <h3>Previous years results overview</h3>
+  <h1><%= t('student_info') %></h1>
+  <h3><%= t('previous_year_result') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
