--- a/app/views/student/upcoming_exams.erb
+++ b/app/views/student/upcoming_exams.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/admission/admission_page_logo.jpg" />
-  <h1>Class : <%= @course.name%></h1>
-  <h3>Upcoming exams</h3>
+  <h1><%= t('class') %> : <%= @course.name%></h1>
+  <h3><%= t('upcoming_exams') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
