--- a/app/views/news/_comment.erb
+++ b/app/views/news/_comment.erb
@@ -21,9 +21,9 @@
   <div class="comment-details">
     <div class="commenter"><%= @cmnt.author.present? ? @cmnt.author.first_name : "User Deleted" %></div>
     <% if permitted_to? :delete_comment , :news %>
-    <div class="delete-comment"><%= link_to_remote  'Delete', :url => { :controller => 'news', :action => 'delete_comment', :id => @cmnt } %></div>
+    <div class="delete-comment"><%= link_to_remote  "#{t('delete')}", :url => { :controller => 'news', :action => 'delete_comment', :id => @cmnt } %></div>
     <%end%>
-    <div class="comment-posted-at">posted <%= time_ago_in_words(@cmnt.created_at) %> ago</div>
+    <div class="comment-posted-at"><%= t('posted') %><%= time_ago_in_words(@cmnt.created_at) %> <%= t('ago') %></div>
   </div>
   <div class="comment-content"><%= sanitize   @cmnt.content.strip.gsub("\n", "<br/>"),:tags => %w[b i a ], :attributes => %w[href] %></div>
 </li>
