--- a/app/views/news/add.html.erb
+++ b/app/views/news/add.html.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/manage_news/manage_news_logo.png" />
-  <h1><%= t('.add') + ' ' + t('index.news') %></h1>
-  <h3><%= t('publish') + ' ' + t('index.school_news') %></h3>
+  <h1><%= t('add') + ' ' + t('news') %></h1>
+  <h3><%= t('publish') + ' ' + t('school_news') %></h3>
   <div id="app-back-button">
 	<%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -36,7 +36,7 @@
 
     <div id="add_news_form">
       <div class="news_label_field">
-        <label for="title"><%= t('all.title') %></label>
+        <label for="title"><%= t('title') %></label>
         <div id="news_title_text_field_bg"><%= f.text_field :title %></div>
       </div>
 
