--- a/app/views/news/index.erb
+++ b/app/views/news/index.erb
@@ -28,9 +28,9 @@
 
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "#{t('student.index.view_all')}", :controller => 'news', :action => 'all' %></li>
+    <li><%= link_to "#{t('view_all')}", :controller => 'news', :action => 'all' %></li>
     <% if permitted_to? :add,:news %>
-      <li><%= link_to "#{t('.add')}", :controller => 'news', :action => 'add' %></li>
+      <li><%= link_to "#{t('add')}", :controller => 'news', :action => 'add' %></li>
     <% end %>
   </ul>
 </div>
@@ -39,9 +39,9 @@
     <div class="news_search_add">
       <div id="news_bg">
         <form name="s1form" action="" style="display:inline;">
-          <h2><%= t('.search') + ' ' + t('news') %></h2>
+          <h2><%= t('search') + ' ' + t('news') %></h2>
           <%= text_field_tag("query", params['query'], :autocomplete => 'off') %>
-          <div id="go"><%= submit_tag "", :value =>"#{t('.search')}", :controller=> 'news', :action=>"index" %></div>
+          <div id="go"><%= submit_tag "", :value =>"#{t('search')}", :controller=> 'news', :action=>"index" %></div>
         </form>
         <div class="extender2"></div>
       </div>
