--- a/app/views/news/view.erb
+++ b/app/views/news/view.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/show_news/show_news_logo.png" />
-  <h1>News</h1>
-  <h3>Read news</h3>
+  <h1><%= t('news') %></h1>
+  <h3><%= t('read_news') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -34,7 +34,7 @@
       <%= @news.title %>
     </div>
     <div id="create_date">
-      Posted on <%= @news.created_at.strftime("%A, %d %B, %Y") %>
+      <%= t('posted_on') %><%= @news.created_at.strftime("%A, %d %B, %Y") %>
     </div>
     <div id="news_content">
       <%= sanitize @news.content , :tags => %w[b i a h1 h2 h3 u strike p img font span sup sub], :attributes => %w[href src style]%>
@@ -42,11 +42,11 @@
 
   <% if @current_user.admin? %>
     
-      <%= link_to "► Edit News", 
+      <%= link_to "► #{t('edit')} #{t('news')}",
         {:controller => "news",  :action => "edit", :id => @news.id }, :class => "edit_button"%>
     
   <div id="">
-      <%= link_to "► Delete News",
+      <%= link_to "► #{t('delete')} #{t('news')}",
         { :controller => "news", :action => "delete", :id => @news.id },
         :confirm => 'Are you sure you want to delete this news item?', :class => "delete_button" %>
      
@@ -54,10 +54,10 @@
   <div class="extender"></div>
   <% end %>
 
-  <h3 id="comments-heading">Comments</h3>
+  <h3 id="comments-heading"><%= t('comments') %></h3>
 
   
-      <span id="comments-count"><% if @comments.empty? %>No comments yet.<% end %></span>
+      <span id="comments-count"><% if @comments.empty? %><%= t('no_comments') %><% end %></span>
     
 
   <ul id="comments-list">
@@ -66,12 +66,12 @@
     <% end %>
   </ul>
 
-  <h4 id="leave-a-comment">Leave a comment</h4>
+  <h4 id="leave-a-comment"><%= t('leave_comments') %></h4>
 
   <% form_remote_for :comment, :id => 'comments-form', :url => { :action => 'add_comment' } do |f| %>
   <div class="comment-content"> <%= f.text_area :content %> </div>
     <%= f.hidden_field :news_id, :value => @news.id %>
-    <div id="submit-button"><%= submit_tag '', :value =>"► Submit" %></div>
+    <div id="submit-button"><%= submit_tag '', :value =>"► #{t('submit')}" %></div>
   <% end %>
 
 </div>
