--- a/app/views/reminder/create_reminder.erb
+++ b/app/views/reminder/create_reminder.erb
@@ -86,8 +86,8 @@
 
 <div id="content-header">
   <img src="/images/reminder/reminder_small.png" />
-  <h1>Messages</h1>
-  <h3>Create/New</h3>
+  <h1><%= t('messages') %></h1>
+  <h3><%= t('create') %>/<%= t('new') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -96,13 +96,13 @@
 <div id="inner-tab-menu">
   <ul>
     <% unless @new_reminder_count.size == 0 %>
-      <li><%= link_to "<b>Inbox (#{@new_reminder_count.size})</b>", :controller=>"reminder", :action=>"index"%></li>
+      <li><%= link_to "<b>#{t('inbox')} (#{@new_reminder_count.size})</b>", :controller=>"reminder", :action=>"index"%></li>
     <% else %>
-      <li><%= link_to "Inbox", :controller=>"reminder", :action=>"index"%></li>
+      <li><%= link_to "#{t('inbox')}", :controller=>"reminder", :action=>"index"%></li>
     <% end %>
 
-    <li><%= link_to "Sent", :controller=>"reminder", :action=>"sent_reminder" %></li>
-    <li><%= link_to "Create", :controller=>"reminder", :action=>"create_reminder" %></li>
+    <li><%= link_to "#{t('sent')}", :controller=>"reminder", :action=>"sent_reminder" %></li>
+    <li><%= link_to "#{t('create')}", :controller=>"reminder", :action=>"create_reminder" %></li>
   </ul>
 </div>
 
@@ -124,11 +124,11 @@
       <% @config = Configuration.available_modules  %>
       <% if @config.include?('HR') %>
         <div class="to-options">
-          <%= link_to_remote "Create reminder to a staff", :url=>{:controller=>"reminder",:action=>"select_employee_department"},:update=>"select-employee-department" %>
+          <%= link_to_remote "#{t('reminder_to_staff')}", :url=>{:controller=>"reminder",:action=>"select_employee_department"},:update=>"select-employee-department" %>
         </div>
       <% else %>
         <div class="to-options">
-          <%= link_to_remote "Create reminder to a staff", :url=>{:controller=>"reminder",:action=>"select_users"},:update=>"select-employee-department" %>
+          <%= link_to_remote "#{t('reminder_to_staff')}", :url=>{:controller=>"reminder",:action=>"select_users"},:update=>"select-employee-department" %>
         </div>
       <% end %>
       <%= image_tag("loader.gif",
@@ -154,7 +154,7 @@
 
 
       <div class="to-options">
-        <%= link_to_remote "Create reminder to a student", :url=>{:controller=>"reminder",:action=>"select_student_course"},:update=>"select-student-course" %>
+        <%= link_to_remote "#{t('reminder_to_student')}", :url=>{:controller=>"reminder",:action=>"select_student_course"},:update=>"select-student-course" %>
       </div>
       <div class="extender"></div>
       <div id="select-student-course">
@@ -169,17 +169,17 @@
     <div class="message">
       <div id="recipient-list"></div>
       <div class="label-field-pair">
-        <label for="subject">Subject</label>
+        <label for="subject"><%= t('subject') %></label>
         <div class="text-input-bg"><%= l.text_field :subject %></div>
       </div>
       <div class="label-field-pair">
-        <label for="student_grade">Message</label>
+        <label for="student_grade"><%= t('message') %></label>
         <div class="text-area-bg"><%= l.text_area :body, :cols=>25, :rows=>10 %>
         </div>
       </div>
       <div class="extender"></div>
       <div id="submit-button">
-        <%=submit_tag "Send", :class => 'button' %>
+        <%=submit_tag "#{t('send')}", :class => 'button' %>
       </div>
     </div>
 
