--- a/app/views/reminder/view_reminder.erb
+++ b/app/views/reminder/view_reminder.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/reminder/reminder_small.png" />
-  <h1>Reminder</h1>
-  <h3>View</h3>
+  <h1><%= t('reminder') %></h1>
+  <h3><%= t('view') %></h3>
   <div id="app-back-button">
   <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -28,9 +28,9 @@
 
 <div id="inner-tab-menu">
   <ul>
-     <li><%= link_to "Back to Inbox", :controller=>"reminder", :action=>"index"%></li>
-    <li><%= link_to "Mark as unread" ,:controller=> "reminder", :action=>"mark_unread", :id2=>@new_reminder.id%></li>
-    <li><%= link_to "Delete", {:controller=>"reminder", :action=>"delete_reminder_by_recipient", :id2=>@new_reminder.id}, :confirm=>"Are you sure?" %></li>
+     <li><%= link_to "#{t('back_to_inbox')}", :controller=>"reminder", :action=>"index"%></li>
+    <li><%= link_to "#{t('mark_as_unread')}" ,:controller=> "reminder", :action=>"mark_unread", :id2=>@new_reminder.id%></li>
+    <li><%= link_to "#{t('delete')}", {:controller=>"reminder", :action=>"delete_reminder_by_recipient", :id2=>@new_reminder.id}, :confirm=>"Are you sure?" %></li>
   </ul>
 </div>
 
@@ -41,13 +41,13 @@
   <% end %>
 
   <div id="reminder-body">
-    <div id="reminder-from">From: <%= @sender.full_name %></div>
-    <div id="reminder-date">Sent on: <%= @new_reminder.created_at.strftime("%A, %d %B, %Y") %></div>
-    <div id="reminder-subject">Subject: <%= @new_reminder.subject %></div>
-    <div id="reminder-message"><strong>Message:</strong><br /><br /><%=h @new_reminder.body %></div>
+    <div id="reminder-from"><%= t('from') %>: <%= @sender.full_name %></div>
+    <div id="reminder-date"><%= t('sent_on') %>: <%= @new_reminder.created_at.strftime("%A, %d %B, %Y") %></div>
+    <div id="reminder-subject"><%= t('subject') %>: <%= @new_reminder.subject %></div>
+    <div id="reminder-message"><strong><%= t('message') %>:</strong><br /><br /><%=h @new_reminder.body %></div>
     <div id="reminder-reply">
 
-      <%= link_to_function "► Reply", :class=>'button' do |page|
+      <%= link_to_function "►#{t('reply')}", :class=>'button' do |page|
         page.visual_effect :toggle_blind, "reply-form"
       end %>
       
@@ -57,16 +57,16 @@
         <%= error_messages_for :reminder %>
         <div class="message">
           <div class="label-field-pair">
-            <label for="subject">Subject</label>
+            <label for="subject"><%= t('subject') %></label>
             <div class="text-input-bg"><%= l.text_field :subject %></div>
           </div>
           <div class="label-field-pair">
-            <label for="start_date">Message</label>
+            <label for="start_date"><%= t('message') %></label>
             <div class="text-area-bg"><%= l.text_area :body, :cols=>25, :rows=>10 %></div>
           </div>
           <div class="extender"></div>
           <div id="submit-button">
-          <%=submit_tag "► Send", :class=> 'button' %>
+          <%=submit_tag "► #{t('send')}", :class=> 'button' %>
         </div>
         </div>
         
