--- a/app/views/sms/_list_students.html.erb
+++ b/app/views/sms/_list_students.html.erb
@@ -20,8 +20,8 @@
 
 <div id="list">
   <div class="sel-list">
-    <%= t('sms_settings.index.select') %>: <%= link_to_function "#{t('.all')}", "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
-<%= link_to_function "#{t('.none')}", "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
+    <%= t('select') %>: <%= link_to_function "#{t('all')}", "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
+<%= link_to_function "#{t('none')}", "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
 </div>
 <% @students.each do |student| %>
 
@@ -36,4 +36,4 @@
 <%= text_area :send_sms,:message, :rows=>5,:cols=>30 %>
 </div>
 </div>
-<%= submit_tag "#{t('sms_settings.index.send_sms')}",:class=>'submit_button' %>
+<%= submit_tag "#{t('send_sms')}",:class=>'submit_button' %>
