--- a/app/views/sms/students.html.erb
+++ b/app/views/sms/students.html.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/sms/sms_icon.png" alt="" />
-  <h1>SMS</h1>
-  <h3>Students</h3>
+  <h1><%= t('sms') %></h1>
+  <h3><%= t('students') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -32,10 +32,10 @@
         :before => "Element.show('loader2')",
         :success => "Element.hide('loader2')" do |x| %>
    <div class="label-field-pair">
-    <div class="label-container"><label>Select a Batch:</label> </div>
+    <div class="label-container"><label><%= t('select_a_batch') %>:</label> </div>
     <div class="text-input-bg"><%= select :send_sms, :batch_id,
         Batch.active.map {|b| [b.full_name, b.id]},
-        {:prompt => 'Select a batch'},
+        {:prompt => "#{t('select_a_batch')}"},
         {:onChange => "#{remote_function(:url => {:action => "list_students"},
         :with => "'batch_id='+value",
         :before => "Element.show('loader')",
