--- a/app/views/sms_settings/index.html.erb
+++ b/app/views/sms_settings/index.html.erb
@@ -19,11 +19,11 @@
 
 <% form_for :sms_settings do |s| %>
   <%= s.check_box :application_enabled, :checked=>@application_sms_enabled.is_enabled %><%= t('application') %><br/>
-      <%= s.submit "#{t('.update')}" %>
+      <%= s.submit "#{t('update')}" %>
 <% end %>
 <br/><br/>
 <% unless @application_sms_enabled.is_enabled == false %>
-  <%= t('general_setting') %>:<br/>
+  <%= t('general_sms_setting') %>:<br/>
   <% form_for :general_settings, :url=>{:controller=>"sms_settings",:action=>"update_general_sms_settings"} do |sms| %>
     <%= sms.check_box :student_admission_enabled, :checked=>@student_admission_sms_enabled.is_enabled %><%= t('student_admission') %><br/>
     <%= sms.check_box :exam_schedule_enabled, :checked=>@exam_schedule_sms_enabled.is_enabled %><%= t('exam_schedule') %><br/>
@@ -32,7 +32,7 @@
     <%= sms.check_box :news_events_enabled, :checked=>@news_events_sms_enabled.is_enabled %><%= t('news_events') %><br/><br/>
     <%= sms.check_box :sms_parents_enabled, :checked=>@parents_sms_enabled.is_enabled %><%= t('send_sms_to_parents') %><br/>
     <%= sms.check_box :sms_students_enabled, :checked=>@students_sms_enabled.is_enabled %><%= t('send_sms_to_students') %><br/>
-   <%= sms.submit "#{t('.update')}" %>
+   <%= sms.submit "#{t('update')}" %>
 
   <% end %>
 <% end %>
