--- a/app/views/student/exam_report.erb
+++ b/app/views/student/exam_report.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/student_details/student_details_logo.jpg" />
-  <h1>Examination Results</h1>
-  <h3>For <%= @examtype.name %> (Class: <%= @course.name %>)</h3>
+  <h1><%= t('examination_results') %></h1>
+  <h3><%= t('for') %> <%= @examtype.name %> (<%= t('class') %>: <%= @course.name %>)</h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
