--- a/app/views/student/fee_details.erb
+++ b/app/views/student/fee_details.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/student_details/student_details_logo.jpg" />
-  <h1>Student</h1>
-  <h3>Fee Status</h3>
+  <h1><%= t('student_text') %></h1>
+  <h3><%= t('fee_status') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -28,8 +28,8 @@
 
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "Fees", :controller => 'student', :action => 'fees', :id => @student.id %></li>
-    <li><%= link_to "Student profile", :controller => 'student', :action => 'profile', :id => @student.id %></li>
+    <li><%= link_to "#{t('fees')}", :controller => 'student', :action => 'fees', :id => @student.id %></li>
+    <li><%= link_to "#{t('student_profile')}", :controller => 'student', :action => 'profile', :id => @student.id %></li>
   </ul>
 </div>
 
@@ -43,8 +43,8 @@
 
     <div id="student_main_info">
       <span class="name"> <%= @student.full_name %>  </span>
-      <span class="course"> Course & Batch: <%= @student.batch.course_name %> </span>
-      <span class="adm"> Adm no : <%= @student.admission_no %> </span>
+      <span class="course"><%= t('course_and_batch') %>: <%= @student.batch.course_name %> </span>
+      <span class="adm"><%= t('adm_no') %>: <%= @student.admission_no %> </span>
     </div>
 
     <div class="extender"> </div>
@@ -56,9 +56,9 @@
     <% total_fees = 0  %>
     <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
       <tr class="tr-head">
-        <td>Sl no.</td>
-        <td>Particulars</td>
-        <td>Amount (<%= currency %>  )</td>
+        <td><%= t('sl_no') %></td>
+        <td><%= t('particulars') %> </td>
+        <td><%= t('amount') %> (<%= currency %>  )</td>
       </tr>
       <tr class="tr-blank"></tr>
       <% i = 0 %>
@@ -76,7 +76,7 @@
         <tr class="tr-blank"></tr>
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
           <td class="col-1" ></td>
-          <td class="col-1" colspan="2"><span>Discount</span></td>
+          <td class="col-1" colspan="2"><span><%= t('discount') %></span></td>
           
         </tr>
         <% @batch_discounts.each do |d| %>
@@ -107,7 +107,7 @@
         <tr class="tr-blank"></tr>
 
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
-          <td class="col-8" colspan="2" >Total Discount</td>
+          <td class="col-8" colspan="2" ><%= t('total_discount') %></td>
           <td class="col-6" ><%= "#{@total_discount} %" %></td>
         </tr>
 
@@ -115,7 +115,7 @@
         <tr class="tr-blank"></tr>
         <% total_fees = (total_fees - ((total_fees*@total_discount)/100)) %>
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
-          <td class="col-8" colspan="2" >Total Fee</td>
+          <td class="col-8" colspan="2" ><%= t('total_fees') %></td>
           <td class="col-6" ><%= total_fees %></td>
         </tr>
         <tr class="tr-blank"></tr>
@@ -126,7 +126,7 @@
       <% unless @fine.nil? %>
         <tr class="tr-<%= cycle("odd","even") %>">
           <td class="col-1"><%= i+=1 %></td>
-          <td class="col-2"><span>Fine</span></td>
+          <td class="col-2"><span><%= t('fine') %></span></td>
           <td class="col-6"><%= @fine.to_f %></td>
         </tr>
         <% total_fees += @fine.to_f %>
@@ -136,14 +136,14 @@
         <tr class="tr-blank"></tr>
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
           <td class="col-1" ></td>
-          <td class="col-1" colspan="2" ><span>Payment Done</span></td
+          <td class="col-1" colspan="2" ><span><%= t('payment_done') %></span></td
         </tr>
         <% paid = 0 %>
         <% @paid_fees.each do |p| %>
           <% paid += p.amount.to_f %>
           <tr class="tr-<%= cycle("odd","even") %>">
             <td class="col-1"><%= i+=1 %></td>
-            <td class="col-2">Partial Payment on <%= p.transaction_date %></td>
+            <td class="col-2"><%= t('partial_payment_on') %> <%= p.transaction_date %></td>
             <td class="col-6">-<%= p.amount.to_f %></td>
           </tr>
         <% end %>
@@ -157,7 +157,7 @@
           <% if @trans.fine_included %>
             <tr class="tr-<%= cycle("odd","even") %>">
               <td class="col-1"><%= i+= 1 %></td>
-              <td class="col-2">Fine</td>
+              <td class="col-2"><%= t('fine') %></td>
               <td class="col-6"><%= @trans.fine_amount %></td>
             </tr>
             <% total_fees += @trans.fine_amount.to_f %>
@@ -167,7 +167,7 @@
       <tr class="tr-blank"></tr>
       <tr class="tr-blank"></tr>
       <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
-        <td class="col-8" colspan="2" >Amount to be paid:</td>
+        <td class="col-8" colspan="2" ><%= t('amount_to_be_paid') %>:</td>
         <td class="col-6" ><%= total_fees%></td>
       </tr>
 
