--- a/app/views/student/fees.erb
+++ b/app/views/student/fees.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/student_details/student_details_logo.jpg" />
-  <h1>Student</h1>
-  <h3>Fee Status</h3>
+  <h1><%= t('student_text') %></h1>
+  <h3><%= t('fee_status') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -28,7 +28,7 @@
 
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "Student profile", :controller => 'student', :action => 'profile', :id => @student.id %></li>
+    <li><%= link_to "#{t('student_profile')}", :controller => 'student', :action => 'profile', :id => @student.id %></li>
   </ul>
 </div>
 
@@ -42,8 +42,8 @@
 
     <div id="student_main_info">
       <span class="name"> <%= @student.full_name %>  </span>
-      <span class="course"> Course & Batch: <%= @student.batch.course_name %> </span>
-      <span class="adm"> Adm no : <%= @student.admission_no %> </span>
+      <span class="course"><%= t('course_and_batch') %>: <%= @student.batch.course_name %> </span>
+      <span class="adm"> <%= t('adm_no') %>: <%= @student.admission_no %> </span>
     </div>
 
     <div class="extender"> </div>
@@ -54,17 +54,17 @@
     <% if permitted_to? :fees_received, :finance %>
       <% form_for :fee do |f|%>
         <% if @student.has_paid_fees == true %>
-          <%= check_box :fee, :has_paid_fees,:checked=>true  %> Has paid fees all fees for the batch.
+          <%= check_box :fee, :has_paid_fees,:checked=>true  %> <%= t('has_paid_all_the_fees') %>
         <% else %>
-          <%= check_box :fee, :has_paid_fees,:checked=>false %> Has paid fees all fees for the batch.
+          <%= check_box :fee, :has_paid_fees,:checked=>false %><%= t('has_paid_all_the_fees') %>
         <% end %>
-        <%= submit_tag "► Update",:class=>'user_button' %>
+        <%= submit_tag "► #{t('update')}",:class=>'user_button' %>
       <% end %>
     <% end %>
   </div>
   <ul id="category-list">
     <% unless @dates.empty? %>
-      <li class="listheading"> <div class="category-name">Fees </div> </li>
+      <li class="listheading"> <div class="category-name"><%= t('fees') %> </div> </li>
     <% end %>
     <%- @dates.each do |d| -%>
       <li class="list<%=cycle('odd', 'even')%>">
