--- a/app/views/student/guardians.erb
+++ b/app/views/student/guardians.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/student_details/student_details_logo.jpg" />
-  <h1>Parents info</h1>
-  <h3>Parents profile</h3>
+  <h1><%= t('parent_info') %></h1>
+  <h3><%= t('parents_profile') %></h3>
   <div id="app-back-button">
       <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -28,9 +28,9 @@
 
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "Student profile", :controller => 'student', :action => 'profile', :id => @student.id %></li>
+    <li><%= link_to "#{t('student_profile')}", :controller => 'student', :action => 'profile', :id => @student.id %></li>
     <% if permitted_to? :add_guardian, :student %>
-      <li><%= link_to "Add guardian", :controller => 'student', :action => 'add_guardian', :id => @student.id %></li>
+      <li><%= link_to "#{t('add_guardian')}", :controller => 'student', :action => 'add_guardian', :id => @student.id %></li>
     <% end %>
   </ul>
 </div>
@@ -45,8 +45,8 @@
 
     <div id="student_main_info">
       <span class="name"> <%= @student.full_name %>  </span>
-      <span class="course"> Course & Batch: <%= @student.batch.course_name %> </span>
-      <span class="adm"> Adm no : <%= @student.admission_no %> </span>
+      <span class="course"><%= t('course_and_batch') %>: <%= @student.batch.course_name %> </span>
+      <span class="adm"><%= t('adm_no') %>: <%= @student.admission_no %> </span>
     </div>
 
     <div class="extender"> </div>
@@ -56,7 +56,7 @@
   <div id="guardians-links">
 
     <ul>
-      <span>Parents/Guardian:</span>
+      <span><%= t('parents_guardian') %>:</span>
       <% @parents.each do |p| %>
         <li><a href="#guardian-details-id-<%= p.id %>"><%= p.full_name %></a> (<%= p.relation %>)</li>
       <% end %>
@@ -72,36 +72,36 @@
       <a name="guardian-details-id-<%= p.id %>"> </a>
       <div id="new_profile_info_top">
         <div class="profile_top_banner"><%= image_tag "master_student/profile/topbanner.png" %></div>
-        <div class="profile_info_label"> Name </div>
+        <div class="profile_info_label"><%= t('name') %></div>
         <div class="profile_info_text">
           <%= p.first_name %> <%= p.last_name %>
         </div>
 
-        <div class="profile_info_label2">Relation</div>
+        <div class="profile_info_label2"><%= t('relation') %></div>
         <div class="profile_info_text2"><%= p.relation %></div>
 
-        <div class="profile_info_label">Date of birth</div>
+        <div class="profile_info_label"><%= t('date_of_birth') %></div>
         <div class="profile_info_text"> <%= p.dob.strftime('%d %B, %Y') unless p.dob.nil? %> </div>
 
 
         <div class="new_profile_info_area1">
-          <div class="profile_info_label2">Email</div>
+          <div class="profile_info_label2"><%= t('email') %></div>
           <div class="profile_info_text2"> <%= p.email %> </div>
 
-          <div class="profile_info_label">Phone 1</div>
+          <div class="profile_info_label"><%= t('office_phone1') %></div>
           <div class="profile_info_text"> <%= p.office_phone1 %> </div>
         </div>
 
         <div class="new_profile_info_area1">
-          <div class="profile_info_label2">Phone 2</div>
+          <div class="profile_info_label2"><%= t('office_phone2') %></div>
           <div class="profile_info_text2"> <%= p.office_phone2 %> </div>
 
-          <div class="profile_info_label">Mobile phone</div>
+          <div class="profile_info_label"><%= t(' mobile_phone_no') %></div>
           <div class="profile_info_text"> <%= p.mobile_phone %> </div>
         </div>
 
         <div class="new_profile_info_area1">
-          <div class="profile_info_label2">Address</div>
+          <div class="profile_info_label2"><%= t('address') %></div>
           <div class="profile_info_text2"> <%= p.office_address_line1%>,<%= p.office_address_line2%> </div>
 
           <div class="profile_info_label"> </div>
@@ -109,10 +109,10 @@
         </div>
 
         <div class="new_profile_info_area1">
-          <div class="profile_info_label2">Income</div>
+          <div class="profile_info_label2"><%= t('income') %></div>
           <div class="profile_info_text2"> <%= p.income %> </div>
 
-          <div class="profile_info_label">Occupation</div>
+          <div class="profile_info_label"><%= t('occupation') %></div>
           <div class="profile_info_text"> <%= p.occupation %> </div>
         </div>
         <div class="extender"></div>
@@ -120,16 +120,16 @@
       <div class="button-pair">
       <% if permitted_to? :edit_guardian,:student %>
         <div class="parent-edit-button">
-          <%= link_to "► Edit",
+          <%= link_to "► #{t('edit')}",
             :controller => 'student', :action => 'edit_guardian', :id => p.id %>
         </div>
       <%  end %>
       <% if permitted_to? :del_guardian,:student %>
         <%  if @student.guardians.size > 1 %>
           <div class="parent-edit-button">
-            <%= link_to "► Delete",
+            <%= link_to "► #{t('delete')}",
               {:controller => 'student', :action => 'del_guardian', :id => p.id },
-              {:confirm => 'Are you completely sure?'} %>
+              {:confirm => "#{t('are_you_completely_sure')}"} %>
           </div>
         <%  end %>
       <% end %>
