--- a/app/views/student/previous_data.html.erb
+++ b/app/views/student/previous_data.html.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/admission/admission_page_logo.jpg" />
- <h1><%= t('.admission') %></h1>
-  <h3><%= t('h3') %></h3>
+ <h1><%= t('admission') %></h1>
+  <h3><%= t('previous_details') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -37,7 +37,7 @@
   <% form_for :student_previous_details do |a| %>
   <%#= error_messages_for 'employee_bank_details' %>
 
-   <span class="span-sub-heading"><%= t('sub_title') %></span>
+   <span class="span-sub-heading"><%= t('previous_educational_details') %></span>
     <hr class="sub-heading"></hr>
     <div id="form-contents">
       <%= a.hidden_field :student_id, :value => @student.id %>
@@ -47,24 +47,24 @@
         <div class="extender"></div>
       </div>
       <div class="label-field-pair">
-        <label><%= t('.course') %></label>
+        <label><%= t('course') %></label>
         <div class="text-input-bg"><%= a.text_field :course %></div>
         <div class="extender"></div>
       </div>
       <div class="label-field-pair">
-        <label><%= t('.year') %></label>
+        <label><%= t('year') %></label>
         <div class="text-input-bg"><%= a.text_field :year %></div>
         <div class="extender"></div>
       </div>
       <div class="label-field-pair">
-        <label><%= t('.total_mark') %></label>
+        <label><%= t('total_mark') %></label>
         <div class="text-input-bg"><%= a.text_field :total_mark %></div>
         <div class="extender"></div>
       </div>
       <div class="save-proceed-button">
         <%= link_to "► #{t('skip')}", {:controller => "student", :action => "admission4", :id => @student.id },:class=>'skip' %>
 
-        <%= submit_tag "► #{t('.save_and_proceed')}" %>
+        <%= submit_tag "► #{t('save_and_proceed')}" %>
 
       </div>
     </div>
