--- a/app/views/student/previous_data_edit.html.erb
+++ b/app/views/student/previous_data_edit.html.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/admission/admission_page_logo.jpg" />
-  <h1><%= t('.admission') %></h1>
-  <h3><%= t('h3') %></h3>
+  <h1><%= t('admission') %></h1>
+  <h3><%= t('edit_previous_details') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -28,7 +28,7 @@
 
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to 'Profile', :action=>:profile, :id=>@student.id %> </li>
+    <li><%= link_to "#{t('profile')}", :action=>:profile, :id=>@student.id %> </li>
   </ul>
 </div>
 
@@ -42,7 +42,7 @@
   <% form_for :previous_data do |a| %>
   <%= error_messages_for 'previous_data' %>
 
-   <span class="span-sub-heading"><%= t('sub_title') %></span>
+   <span class="span-sub-heading"><%= t('previous_educational_details') %></span>
     <hr class="sub-heading"></hr>
     <div id="form-contents">
       <%= a.hidden_field :student_id, :value => @student.id %>
@@ -52,23 +52,23 @@
         <div class="extender"></div>
       </div>
       <div class="label-field-pair">
-        <label><%= t('.course') %></label>
+        <label><%= t('course') %></label>
         <div class="text-input-bg"><%= a.text_field :course %></div>
         <div class="extender"></div>
       </div>
       <div class="label-field-pair">
-        <label><%= t('.year') %></label>
+        <label><%= t('year') %></label>
         <div class="text-input-bg"><%= a.text_field :year %></div>
         <div class="extender"></div>
       </div>
       <div class="label-field-pair">
-        <label><%= t('.total_mark') %></label>
+        <label><%= t('total_mark') %></label>
         <div class="text-input-bg"><%= a.text_field :total_mark %></div>
         <div class="extender"></div>
       </div>
       <div class="save-proceed-button">
 
-        <%= submit_tag "►#{t('.update')}" %>
+        <%= submit_tag "►#{t('update')}" %>
 
       </div>
     </div>
