--- a/app/views/student/previous_years_marks_overview.erb
+++ b/app/views/student/previous_years_marks_overview.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/admission/admission_page_logo.jpg" />
-  <h1>Student info</h1>
-  <h3>Previous years results overview</h3>
+  <h1><%= t('student_info') %></h1>
+  <h3><%= t('previous_year_result') %></h3>
   <div id="app-back-button">
    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -33,8 +33,8 @@
   <div id="results-table">
 
     <div class="results-table-th">
-      <div class="course-name">Class/sec</div>
-      <div class="total-score">Total marks</div>
+      <div class="course-name"><%= t('class_sec') %></div>
+      <div class="total-score"><%= t('total_marks') %></div>
     </div>
 
     <% @all_courses.each do |c| %>
