--- a/app/views/student/profile_pdf.erb
+++ b/app/views/student/profile_pdf.erb
@@ -27,7 +27,7 @@
 
     <div id ="student_main_info">
       <h2> <%= @student.full_name %>  </h2>
-      <h4> Student Profile</h4>
+      <h4><%= t('student_profile') %></h4>
     </div>
 
     <div class="extender"> </div>
@@ -36,26 +36,26 @@
 
   <div id="new_profile_info_top">
     <table id="pdf-table" width="100%" cellspacing="0">
-      <tr class="odd"><td class="col-pdf">Admission Number</td><td class="col-pdf"><%= @student.admission_no unless @student.admission_no.nil? %></td></tr>
-      <tr class="even"><td class="col-pdf">Admission Date</td><td class="col-pdf"><%= @student.admission_date.strftime("%d %b, %Y") unless @student.admission_date.nil? %></td></tr>
-      <tr class="odd"><td class="col-pdf">Batch</td><td class="col-pdf"><%= @student.batch.name unless @student.batch.name.nil? %></td></tr>
-      <tr class="even"><td class="col-pdf">Course</td><td class="col-pdf"><%= @student.batch.course.full_name unless @student.batch.course.full_name.nil? %></td></tr>
-      <tr class="odd"><td>Date of birth</td><td class="right"><%= @student.date_of_birth.strftime("%d %b, %Y") unless @student.date_of_birth.nil? %></td></tr>
-      <tr class="even"><td>Blood group</td><td class="right"><%= @student.blood_group %></td></tr>
-      <tr class="odd"><td>Gender</td><td class="right"><%= @student.gender_as_text %></td></tr>
-      <tr class="even"><td>Nationality</td><td class="right"><%= @student.nationality.name unless @student.nationality_id.nil? %></td></tr>
-      <tr class="odd"><td>Language</td><td class="right"><%= @student.language %></td></tr>
+      <tr class="odd"><td class="col-pdf"><%= t('admission_number') %></td><td class="col-pdf"><%= @student.admission_no unless @student.admission_no.nil? %></td></tr>
+      <tr class="even"><td class="col-pdf"><%= t('admission_date') %></td><td class="col-pdf"><%= @student.admission_date.strftime("%d %b, %Y") unless @student.admission_date.nil? %></td></tr>
+      <tr class="odd"><td class="col-pdf"><%= t('batch') %></td><td class="col-pdf"><%= @student.batch.name unless @student.batch.name.nil? %></td></tr>
+      <tr class="even"><td class="col-pdf"><%= t('course') %></td><td class="col-pdf"><%= @student.batch.course.full_name unless @student.batch.course.full_name.nil? %></td></tr>
+      <tr class="odd"><td><%= t('date_of_birth') %></td><td class="right"><%= @student.date_of_birth.strftime("%d %b, %Y") unless @student.date_of_birth.nil? %></td></tr>
+      <tr class="even"><td><%= t('blood_group') %></td><td class="right"><%= @student.blood_group %></td></tr>
+      <tr class="odd"><td><%= t('gender') %></td><td class="right"><%= @student.gender_as_text %></td></tr>
+      <tr class="even"><td><%= t('nationality') %></td><td class="right"><%= @student.nationality.name unless @student.nationality_id.nil? %></td></tr>
+      <tr class="odd"><td><%= t('language') %></td><td class="right"><%= @student.language %></td></tr>
 
-      <tr class="even"><td>Category</td><td class="right"><%= @student.student_category.name unless @student.student_category.nil? %></td></tr>
-      <tr class="odd"><td>Religion</td><td class="right"><%= @student.religion %></td></tr>
-      <tr class="even"><td>Address</td><td class="right"><%= @student.address_line1%>, <%=  @student.address_line2 %></td></tr>
-      <tr class="odd"><td>City</td><td class="right"><%= @student.city %></td></tr>
-      <tr class="even"><td>State</td><td class="right"><%= @student.state %></td></tr>
-      <tr class="odd"><td>Country</td><td class="right"><%= @student.country.name unless @student.country_id.nil? %></td></tr>
-      <tr class="even"><td>Phone</td><td class="right"><%= @student.phone1 %></td></tr>
-      <tr class="odd"><td>Mobile</td><td class="right"><%= @student.phone2 %></td></tr>
-      <tr class="even"><td>Email</td><td class="right"><%= @student.email %></td></tr>
-      <tr class="odd"><td>Group Tutor</td><td class="right">
+      <tr class="even"><td><%= t('category') %></td><td class="right"><%= @student.student_category.name unless @student.student_category.nil? %></td></tr>
+      <tr class="odd"><td><%= t('religion') %></td><td class="right"><%= @student.religion %></td></tr>
+      <tr class="even"><td><%= t('address') %></td><td class="right"><%= @student.address_line1%>, <%=  @student.address_line2 %></td></tr>
+      <tr class="odd"><td><%= t('city') %></td><td class="right"><%= @student.city %></td></tr>
+      <tr class="even"><td><%= t('state') %></td><td class="right"><%= @student.state %></td></tr>
+      <tr class="odd"><td><%= t('country') %></td><td class="right"><%= @student.country.name unless @student.country_id.nil? %></td></tr>
+      <tr class="even"><td><%= t('phone') %></td><td class="right"><%= @student.phone1 %></td></tr>
+      <tr class="odd"><td><%= t('mobile') %></td><td class="right"><%= @student.phone2 %></td></tr>
+      <tr class="even"><td><%= t('email') %></td><td class="right"><%= @student.email %></td></tr>
+      <tr class="odd"><td><%= t('group_tutor') %></td><td class="right">
           <% unless @student.batch.employee_id.nil? %>
             <% @assigned_employees = Employee.find(:all,:conditions=>"FIND_IN_SET(id,\"#{@student.batch.employee_id}\")")  %>
 
@@ -67,7 +67,7 @@
 
       <% end  %>
 
-      <tr class="even"><td>Immediate Contact </td><td class="right">
+      <tr class="even"><td><%= t('immediate_contact') %></td><td class="right">
           <%= @immediate_contact.full_name unless @immediate_contact.nil? %> <%= "(" + @immediate_contact.mobile_phone + ")" if @immediate_contact and !@immediate_contact.mobile_phone.empty? %>
         </td></tr>
 <% c = 'odd'  %>
@@ -84,7 +84,7 @@
       <% end %>
 
        <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
-       <td>Previous Institution</td>
+       <td><%= t('previous_institution') %></td>
         <td class="right"><%= @previous_data.institution unless @previous_data.nil?%></td></tr>
     </table>
 
