--- a/app/views/student/show_previous_details.erb
+++ b/app/views/student/show_previous_details.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/student_details/student_details_logo.jpg" />
-  <h1>Student info</h1>
-  <h3>Previous Details</h3>
+  <h1><%= t('student_info') %></h1>
+  <h3><%= t('previous_details') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -28,7 +28,7 @@
 
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to 'Profile', :action=>:profile, :id=>@student.id %> </li>
+    <li><%= link_to "#{t('profile')}", :action=>:profile, :id=>@student.id %> </li>
   </ul>
 </div>
 
@@ -48,8 +48,8 @@
 
     <div id ="student_main_info">
       <h3> <%= @student.full_name %>  </h3>
-      <h4> Course & Batch : <%= @student.batch.course_name %> </h4>
-      <h4> Adm no. : <%= @student.admission_no %> </h4>
+      <h4> <%= t('course_and_batch') %> : <%= @student.batch.course_name %> </h4>
+      <h4><%= t('adm_no') %>: <%= @student.admission_no %> </h4>
     </div>
 
     <div class="extender"> </div>
@@ -61,23 +61,23 @@
 
     <% unless @previous_data.nil? %>
       <div class="new_profile_info_area1">
-        <div class="profile_info_label_top">Institution Name</div>
+        <div class="profile_info_label_top"><%= t('institution_name') %></div>
         <div class="profile_info_text_top"><%=@previous_data.institution %></div>
       </div>
       <div class="new_profile_info_area1">
-        <div class="profile_info_label_top2">Course</div>
+        <div class="profile_info_label_top2"><%= t('course') %></div>
         <div class="profile_info_text_top2"><%=@previous_data.course %></div>
 
-        <div class="profile_info_label_top">Year </div>
+        <div class="profile_info_label_top"><%= t('year') %></div>
         <div class="profile_info_text_top"><%=@previous_data.year %></div>
       </div>
       <div class="new_profile_info_area1">
-        <div class="profile_info_label_top2">Total Mark</div>
+        <div class="profile_info_label_top2"><%= t('total_mark') %></div>
         <div class="profile_info_text_top2"><%=@previous_data.total_mark %></div>
       </div>
       <div class="new_profile_info_area1">
         <div class="profile_info_label_top"></div>
-        <div class="profile_info_text_top"><u>Subjects</u></div>
+        <div class="profile_info_text_top"><u><%= t('subjects') %></u></div>
       </div>
       <% unless @previous_subjects.blank? %>
         <div class="prev_subject_box">
@@ -92,14 +92,14 @@
       <% else %>
         <div class="new_profile_info_area1">
           <div class="profile_info_label_top"></div>
-          <div class="profile_info_text_top"><u>(No Previous Subject Added)</u></div>
+          <div class="profile_info_text_top"><u>(<%= t('no_previous_subject') %>)</u></div>
         </div>
       <% end %>
     <% end %>
 
 
     <div class="buttons">
-      <%= link_to " ► Edit",
+      <%= link_to " ► #{t('edit')}",
         { :controller => "student", :action => "previous_data_edit", :id => @student.id },:class => "user_button"%>
     </div>
     <div class="extender"></div>
