--- a/app/views/student/view_all.erb
+++ b/app/views/student/view_all.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/student_details/student_details_logo.jpg" />
-  <h1>Student Details</h1>
-  <h3>View Details</h3>
+  <h1><%= t('student_details') %> </h1>
+  <h3><%= t('view_details') %> </h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -33,10 +33,10 @@
   <% end %>
 
   <div class="label-field-pair-select-class">
-    <label for="student-detail-select-class">Select a Batch</label>
+    <label for="student-detail-select-class"><%= t('select_a_batch') %> </label>
     <div class="text-input-bg"><%= select :course, :course_id, 
         @batches.map {|b| [b.full_name, b.id]},
-        {:prompt => 'Select a batch'},
+        {:prompt => "#{t('select_a_batch')}"},
         {:onChange => "#{remote_function(:url => {:action => "list_students_by_course"},
         :with => "'batch_id='+value",
         :before => "Element.show('loader')",
